GearsetPOC/force-app/main/default/objects/Ticket__c/fields/FPU_Redemption__c.field-meta.xml
<CustomField>
    <fullName>FPU_Redemption__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Has this customer redeemed his FPU ?</description>
    <label>FPU Redemption</label>
    <type>Checkbox</type>
</CustomField>