GearsetPOC/force-app/main/default/objects/Ticket__c/fields/FPU_Redemption_populated__c.field-meta.xml
<CustomField>
    <fullName>FPU_Redemption_populated__c</fullName>
    <formula>IF(FPU_Redemption__c=True,&quot;Redeemed&quot;,&quot;Not Redeemed&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FPU Redeemed out of all tickets</label>
    <type>Text</type>
</CustomField>