GearsetPOC/force-app/main/default/objects/Ticket__c/fields/Fraud__c.field-meta.xml
<CustomField>
    <fullName>Fraud__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field to identify if Ticket is fraudulent</description>
    <label>Fraud?</label>
    <type>Checkbox</type>
</CustomField>