GearsetPOC/force-app/main/default/objects/Ticket__c/fields/FraudCaseReference__c.field-meta.xml
<CustomField>
    <fullName>FraudCaseReference__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The ID of the Fraud Case related to this PNR</description>
    <label>FraudCaseReference</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Tickets</relationshipLabel>
    <relationshipName>Tickets</relationshipName>
    <type>Lookup</type>
</CustomField>