GearsetPOC/force-app/main/default/objects/Ticket__c/fields/FUTURE_Reviewed__c.field-meta.xml
<CustomField>
    <fullName>FUTURE_Reviewed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FUTURE Reviewed</label>
    <type>Checkbox</type>
</CustomField>