GearsetPOC/force-app/main/default/objects/Ticket__c/fields/Group_Booking__c.field-meta.xml
<CustomField>
    <fullName>Group_Booking__c</fullName>
    <formula>IF(
(PAX_Type__c = &quot;GC&quot;)
||(PAX_Type__c = &quot;GE&quot;)
||(PAX_Type__c = &quot;GA&quot;)
||(PAX_Type__c = &quot;GV&quot;)
||(PAX_Type__c = &quot;OG&quot;)
||(PAX_Type__c = &quot;GW&quot;)
||(PAX_Type__c = &quot;GF&quot;)
||(PAX_Type__c = &quot;GU&quot;)
||(PAX_Type__c = &quot;GZ&quot;)
||(PAX_Type_Filter__c = &quot;GROUP&quot;)
,True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Group Booking</label>
    <type>Checkbox</type>
</CustomField>