GearsetPOC/force-app/main/default/objects/Ticket__c/fields/IATA_code__c.field-meta.xml
<CustomField>
    <fullName>IATA_code__c</fullName>
    <label>IATA_code</label>
    <length>250</length>
    <type>Text</type>
</CustomField>