GearsetPOC/force-app/main/default/objects/Ticket__c/fields/Infant_Firstname__c.field-meta.xml
<CustomField>
    <fullName>Infant_Firstname__c</fullName>
    <label>Infant_Firstname</label>
    <length>80</length>
    <type>Text</type>
</CustomField>