GearsetPOC/force-app/main/default/objects/Ticket__c/fields/Invalid_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Invalid_Contact_Phone__c</fullName>
    <description>This formula is here to help us prevent from sending invalid/polluted phone numbers to Marketing Cloud. There is a filter in Marketing Cloud Imports that excludes phone numbers marked as invalid here.</description>
    <formula>IF(ISBLANK(Contact_Phone__c), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Marketing Cloud Invalid Phone</label>
    <type>Checkbox</type>
</CustomField>