GearsetPOC/force-app/main/default/objects/Ticket__c/fields/Invalid_Ticket_Boomi__c.field-meta.xml
<CustomField>
    <fullName>Invalid_Ticket_Boomi__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is a temporary field created to delete the invalid tickets created by Boomi using the test OASSIS data post ICLP migration</description>
    <label>Invalid Ticket Boomi</label>
    <type>Checkbox</type>
</CustomField>