GearsetPOC/force-app/main/default/objects/Ticket__c/fields/Known_Booker__c.field-meta.xml
<CustomField>
    <fullName>Known_Booker__c</fullName>
    <formula>IF( Booker__c &lt;&gt; NULL, &quot;Known booker&quot;, &quot;Unknown booker&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Booker Known</label>
    <type>Text</type>
</CustomField>