GearsetPOC/force-app/main/default/objects/Ticket__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <label>Contract code</label>
    <length>250</length>
    <type>Text</type>
</CustomField>