GearsetPOC/force-app/main/default/objects/Ticket__c/fields/Loyalty_Number__c.field-meta.xml
<CustomField>
    <fullName>Loyalty_Number__c</fullName>
    <label>Loyalty Number (not used?)</label>
    <length>128</length>
    <type>Text</type>
</CustomField>