GearsetPOC/force-app/main/default/objects/Ticket__c/fields/Loyalty_Tier__c.field-meta.xml
<CustomField>
    <fullName>Loyalty_Tier__c</fullName>
    <description>Populated from Redshift - iLoyal (legacy) Data - NOT accurate
CC - Carte Classique
CB - Carte Blanche
CBE - Carte Blanche Elite</description>
    <inlineHelpText>NOTE: This field contains iLoyal Data and is NOT an accurate source of loyalty tier. Please check Booker  Loyalty Member Tier Description</inlineHelpText>
    <label>Booker Loyalty Tier</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Carte Blanche</fullName>
            </value>
            <value>
                <fullName>Carte Blanche (Corporate)</fullName>
            </value>
            <value>
                <fullName>Carte Blanche (Elite)</fullName>
            </value>
            <value>
                <fullName>Carte Blanche (Eurostar Staff)</fullName>
            </value>
            <value>
                <fullName>Carte Blanche (VIP)</fullName>
            </value>
            <value>
                <fullName>Carte Classique</fullName>
            </value>
            <value>
                <fullName>Carte Classique (Corporate)</fullName>
            </value>
            <value>
                <fullName>Carte Classique (Eurostar Staff)</fullName>
            </value>
            <value>
                <fullName>EPP Default Tier</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>