GearsetPOC/force-app/main/default/objects/Ticket__c/fields/Loyalty_Tier_ICLP__c.field-meta.xml
<CustomField>
    <fullName>Loyalty_Tier_ICLP__c</fullName>
    <formula>IF( Booker__c &lt;&gt; NULL, Booker__r.Loyalty_Tier__pc, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Booker Loyalty Tier</label>
    <type>Text</type>
</CustomField>