GearsetPOC/force-app/main/default/objects/Ticket__c/fields/Membership_Number__c.field-meta.xml
<CustomField>
    <fullName>Membership_Number__c</fullName>
    <label>Membership Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>