GearsetPOC/force-app/main/default/objects/Ticket__c/fields/Mismatched_Claim_email__c.field-meta.xml
<CustomField>
    <fullName>Mismatched_Claim_email__c</fullName>
    <formula>IF(
(( LOWER(FraudCaseReference__r.SuppliedEmail) = LOWER(ETAP_Email__c))
|| ( LOWER(FraudCaseReference__r.SuppliedEmail) = LOWER(Email__c))
|| ( LOWER(FraudCaseReference__r.SuppliedEmail) = LOWER(Booker__r.PersonEmail)))
,False,True)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mismatched Claim email</label>
    <type>Checkbox</type>
</CustomField>