GearsetPOC/force-app/main/default/objects/Ticket__c/fields/Name_Check__c.field-meta.xml
<CustomField>
    <fullName>Name_Check__c</fullName>
    <description>Full Name minus Title</description>
    <formula>First_Name__c + &quot; &quot; + Last_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name Check</label>
    <type>Text</type>
</CustomField>