GearsetPOC/force-app/main/default/objects/Ticket__c/fields/Non_Eurostar_Destination__c.field-meta.xml
<CustomField>
    <fullName>Non_Eurostar_Destination__c</fullName>
    <label>Journey Destination</label>
    <length>80</length>
    <type>Text</type>
</CustomField>