GearsetPOC/force-app/main/default/objects/Ticket__c/fields/Oassis_Audit_Reference__c.field-meta.xml
<CustomField>
    <fullName>Oassis_Audit_Reference__c</fullName>
    <label>Oassis Audit Reference</label>
    <length>50</length>
    <type>Text</type>
</CustomField>