GearsetPOC/force-app/main/default/objects/Ticket__c/fields/office_code__c.field-meta.xml
<CustomField>
    <fullName>office_code__c</fullName>
    <label>office_code</label>
    <length>250</length>
    <type>Text</type>
</CustomField>