GearsetPOC/force-app/main/default/objects/Ticket__c/fields/Open_Evoucher_Request__c.field-meta.xml
<CustomField>
    <fullName>Open_Evoucher_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Open Evoucher Request</label>
    <type>Checkbox</type>
</CustomField>