GearsetPOC/force-app/main/default/objects/Ticket__c/fields/Origin__c.field-meta.xml
<CustomField>
    <fullName>Origin__c</fullName>
    <description>Origin Station</description>
    <label>Origin</label>
    <length>80</length>
    <type>Text</type>
</CustomField>