GearsetPOC/force-app/main/default/objects/Ticket__c/fields/Original_Travel_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Original_Travel_DateTime__c</fullName>
    <externalId>true</externalId>
    <label>Original Departure DateTime</label>
    <length>80</length>
    <type>Text</type>
</CustomField>