GearsetPOC/force-app/main/default/objects/Ticket__c/fields/Package_Booking__c.field-meta.xml
<CustomField>
    <fullName>Package_Booking__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Package Booking</label>
    <type>Checkbox</type>
</CustomField>