GearsetPOC/force-app/main/default/objects/Ticket__c/fields/PAX_Type__c.field-meta.xml
<CustomField>
    <fullName>PAX_Type__c</fullName>
    <label>PAX Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>