GearsetPOC/force-app/main/default/objects/Ticket__c/fields/PAX_Type_Description__c.field-meta.xml
<CustomField>
    <fullName>PAX_Type_Description__c</fullName>
    <description>S3 product description</description>
    <label>PAX Type Description</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>