GearsetPOC/force-app/main/default/objects/Ticket__c/fields/PAX_Type_Filter__c.field-meta.xml
<CustomField>
    <fullName>PAX_Type_Filter__c</fullName>
    <label>PAX Type Filter</label>
    <type>TextArea</type>
</CustomField>