GearsetPOC/force-app/main/default/objects/Ticket__c/fields/Payment_Description__c.field-meta.xml
<CustomField>
    <fullName>Payment_Description__c</fullName>
    <label>Payment Description</label>
    <length>80</length>
    <type>Text</type>
</CustomField>