GearsetPOC/force-app/main/default/objects/Ticket__c/fields/Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>Payment_Type__c</fullName>
    <label>Payment Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>