GearsetPOC/force-app/main/default/objects/Ticket__c/fields/Phone_Locale__c.field-meta.xml
<CustomField>
    <fullName>Phone_Locale__c</fullName>
    <label>Marketing Cloud Phone Locale</label>
    <length>5</length>
    <type>Text</type>
</CustomField>