GearsetPOC/force-app/main/default/objects/Ticket__c/fields/PNR_Ticket__c.field-meta.xml
<CustomField>
    <fullName>PNR_Ticket__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Upsert external Id field for ticket loads</description>
    <externalId>true</externalId>
    <label>PNR-Ticket</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>