GearsetPOC/force-app/main/default/objects/Ticket__c/fields/Point_of_Sale__c.field-meta.xml
<CustomField>
    <fullName>Point_of_Sale__c</fullName>
    <label>Point of Sale</label>
    <length>80</length>
    <type>Text</type>
</CustomField>