GearsetPOC/force-app/main/default/objects/Ticket__c/fields/Point_of_Sale_Latest__c.field-meta.xml
<CustomField>
    <fullName>Point_of_Sale_Latest__c</fullName>
    <label>Sales channel latest</label>
    <length>250</length>
    <type>Text</type>
</CustomField>