GearsetPOC/force-app/main/default/objects/Ticket__c/fields/Point_of_Sale_original__c.field-meta.xml
<CustomField>
    <fullName>Point_of_Sale_original__c</fullName>
    <externalId>true</externalId>
    <label>Sales channel original</label>
    <length>250</length>
    <type>Text</type>
</CustomField>