GearsetPOC/force-app/main/default/objects/Ticket__c/fields/POS_UIC_Code__c.field-meta.xml
<CustomField>
    <fullName>POS_UIC_Code__c</fullName>
    <label>POS UIC Code</label>
    <length>250</length>
    <type>Text</type>
</CustomField>