GearsetPOC/force-app/main/default/objects/Ticket__c/fields/raw_ETAP_Phone__c.field-meta.xml
<CustomField>
    <fullName>raw_ETAP_Phone__c</fullName>
    <label>raw ETAP Phone</label>
    <length>80</length>
    <type>Text</type>
</CustomField>