GearsetPOC/force-app/main/default/objects/Ticket__c/fields/raw_telephone_number__c.field-meta.xml
<CustomField>
    <fullName>raw_telephone_number__c</fullName>
    <description>Field to store original number</description>
    <label>raw telephone number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>