GearsetPOC/force-app/main/default/objects/Ticket__c/fields/Repriced__c.field-meta.xml
<CustomField>
    <fullName>Repriced__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Repriced</label>
    <type>Checkbox</type>
</CustomField>