GearsetPOC/force-app/main/default/objects/Ticket__c/fields/Retimed__c.field-meta.xml
<CustomField>
    <fullName>Retimed__c</fullName>
    <formula>IF( ISBLANK(Original_Travel_DateTime__c), false, IF(Travel_DateTime__c=Original_Travel_DateTime__c, false,true) )</formula>
    <label>Departure retimed?</label>
    <type>Checkbox</type>
</CustomField>