GearsetPOC/force-app/main/default/objects/Ticket__c/fields/S3_Cancel__c.field-meta.xml
<CustomField>
    <fullName>S3_Cancel__c</fullName>
    <defaultValue>false</defaultValue>
    <label>S3 Cancel</label>
    <type>Checkbox</type>
</CustomField>