GearsetPOC/force-app/main/default/objects/Ticket__c/fields/Seat_Number__c.field-meta.xml
<CustomField>
    <fullName>Seat_Number__c</fullName>
    <label>Seat Number</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>