GearsetPOC/force-app/main/default/objects/Ticket__c/fields/Skip_Archive__c.field-meta.xml
<CustomField>
    <fullName>Skip_Archive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to skip records that have failed during archiving</description>
    <label>Skip Archive</label>
    <type>Checkbox</type>
</CustomField>