GearsetPOC/force-app/main/default/objects/Ticket__c/fields/Special_Assistance_Request__c.field-meta.xml
<CustomField>
    <fullName>Special_Assistance_Request__c</fullName>
    <label>Special Assistance Request</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>