GearsetPOC/force-app/main/default/objects/Ticket__c/fields/TECH_Dell_Error__c.field-meta.xml
<CustomField>
    <fullName>TECH_Dell_Error__c</fullName>
    <label>TECH Dell Error</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>