GearsetPOC/force-app/main/default/objects/Ticket__c/fields/Telephone_Number__c.field-meta.xml
<CustomField>
    <fullName>Telephone_Number__c</fullName>
    <label>Telephone Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>