GearsetPOC/force-app/main/default/objects/Ticket__c/fields/Test_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Test_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Test Trigger</label>
    <type>Checkbox</type>
</CustomField>