GearsetPOC/force-app/main/default/objects/Ticket__c/fields/Throughfare_Cost__c.field-meta.xml
<CustomField>
    <fullName>Throughfare_Cost__c</fullName>
    <label>Throughfare Cost</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>