GearsetPOC/force-app/main/default/objects/Ticket__c/fields/Throughfare_Currency__c.field-meta.xml
<CustomField>
    <fullName>Throughfare_Currency__c</fullName>
    <label>Throughfare Currency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GBP</fullName>
            </value>
            <value>
                <fullName>EUR</fullName>
            </value>
            <value>
                <fullName>USD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>