GearsetPOC/force-app/main/default/objects/Ticket__c/fields/Ticket_Has_Additional_Compensation__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Has_Additional_Compensation__c</fullName>
    <formula>IF( ISBLANK(Train__r.All__c),&quot;No&quot;, &quot;Yes&quot;)</formula>
    <label>Compensation - Additional % Applied</label>
    <type>Text</type>
</CustomField>