GearsetPOC/force-app/main/default/objects/Ticket__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <description>Passenger Title- eg Dr. Mr. Mrs.</description>
    <label>Title</label>
    <length>30</length>
    <type>Text</type>
</CustomField>