GearsetPOC/force-app/main/default/objects/Ticket__c/fields/Total_GBP_Payment_Amt__c.field-meta.xml
<CustomField>
    <fullName>Total_GBP_Payment_Amt__c</fullName>
    <inlineHelpText>Bug: The Compensation_Ticket__r.GBP_Payment_Amount_Num__c field is not populated, resulting in a 0 value.</inlineHelpText>
    <label>Compensation - Total (GBP) (Not Working)</label>
    <summarizedField>Compensation_Ticket__c.GBP_Payment_Amount_Num__c</summarizedField>
    <summaryForeignKey>Compensation_Ticket__c.Ticket__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>