GearsetPOC/force-app/main/default/objects/Ticket__c/fields/Train__c.field-meta.xml
<CustomField>
    <fullName>Train__c</fullName>
    <label>Train</label>
    <referenceTo>Train__c</referenceTo>
    <relationshipLabel>Tickets</relationshipLabel>
    <relationshipName>Tickets</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>