GearsetPOC/force-app/main/default/objects/Ticket__c/fields/Train_No_Catering__c.field-meta.xml
<CustomField>
    <fullName>Train_No_Catering__c</fullName>
    <formula>Train__r.No_Catering__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Train No Catering</label>
    <type>Checkbox</type>
</CustomField>