GearsetPOC/force-app/main/default/objects/Ticket__c/fields/Train_Number__c.field-meta.xml
<CustomField>
    <fullName>Train_Number__c</fullName>
    <formula>MID(Train__r.Name,2,4)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Train Number</label>
    <type>Text</type>
</CustomField>