GearsetPOC/force-app/main/default/objects/Ticket__c/fields/Train_Service_Id__c.field-meta.xml
<CustomField>
    <fullName>Train_Service_Id__c</fullName>
    <label>Train Service Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>