GearsetPOC/force-app/main/default/objects/Ticket__c/fields/Train_Unacceptable_Travel_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Train_Unacceptable_Travel_Conditions__c</fullName>
    <formula>Train__r.Unacceptable_Travel_Conditions__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Train Unacceptable Travel Conditions</label>
    <type>Checkbox</type>
</CustomField>