GearsetPOC/force-app/main/default/objects/Ticket__c/fields/Travel_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Travel_DateTime__c</fullName>
    <description>Travel DateTime</description>
    <externalId>true</externalId>
    <label>Departure DateTime</label>
    <length>80</length>
    <type>Text</type>
</CustomField>