GearsetPOC/force-app/main/default/objects/Ticket__c/fields/Traveller__c.field-meta.xml
<CustomField>
    <fullName>Traveller__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact (old)</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Tickets</relationshipLabel>
    <relationshipName>Tickets</relationshipName>
    <type>Lookup</type>
</CustomField>