GearsetPOC/force-app/main/default/objects/Ticket__c/fields/uic_noneurostarorigin__c.field-meta.xml
<CustomField>
    <fullName>uic_noneurostarorigin__c</fullName>
    <label>UIC Journey Origin</label>
    <length>20</length>
    <type>Text</type>
</CustomField>