GearsetPOC/force-app/main/default/objects/Ticket__c/fields/uicdestination__c.field-meta.xml
<CustomField>
    <fullName>uicdestination__c</fullName>
    <label>UIC Destination</label>
    <length>20</length>
    <type>Text</type>
</CustomField>