GearsetPOC/force-app/main/default/objects/Ticket__c/fields/uicorigin__c.field-meta.xml
<CustomField>
    <fullName>uicorigin__c</fullName>
    <label>UIC Origin</label>
    <length>20</length>
    <type>Text</type>
</CustomField>