GearsetPOC/force-app/main/default/objects/Ticket__c/validationRules/TCN_numbers_must_be_9_digits.validationRule-meta.xml
<ValidationRule>
    <fullName>TCN_numbers_must_be_9_digits</fullName>
    <active>true</active>
    <description>Lenght should not be greater than 9</description>
    <errorConditionFormula>NOT( REGEX( Name, &quot;[0-9]{9}&quot;))</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>TCN must be 9 digits</errorMessage>
</ValidationRule>