GearsetPOC/force-app/main/default/objects/Ticket__c/listViews/Connecting_Destination_Today.listView-meta.xml
<ListView>
    <fullName>Connecting_Destination_Today</fullName>
    <columns>Connecting_Destination__c</columns>
    <columns>NAME</columns>
    <columns>PNR__c</columns>
    <columns>Train__c</columns>
    <columns>Travel_DateTime__c</columns>
    <columns>Ticket_Status__c</columns>
    <columns>Non_Eurostar_Destination__c</columns>
    <columns>Non_Eurostar_Origin__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Connecting_Destination__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>Departure_Date_Time_Format__c</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>Cancelled_DateTime__c</field>
        <operation>equals</operation>
    </filters>
    <label>Connecting Destination (Today)</label>
    <language>en_US</language>
</ListView>