GearsetPOC/force-app/main/default/objects/Ticket__c/listViews/Created_Today.listView-meta.xml
<ListView>
    <fullName>Created_Today</fullName>
    <columns>CREATEDBY_USER</columns>
    <columns>NAME</columns>
    <columns>PNR__c</columns>
    <columns>Point_of_Sale__c</columns>
    <columns>Telephone_Number__c</columns>
    <columns>Ticket_Status__c</columns>
    <columns>Cancelled_By_Customer__c</columns>
    <columns>Cancelled_DateTime__c</columns>
    <columns>Cancelled_Description__c</columns>
    <columns>Booking_DateTime__c</columns>
    <columns>ETAP_Phone__c</columns>
    <columns>Invalid_Contact_Phone__c</columns>
    <columns>Delay_mins__c</columns>
    <columns>Booker__c</columns>
    <columns>Checked_in_Method__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Train_Number__c</field>
        <operation>equals</operation>
        <value>9119</value>
    </filters>
    <label>Created (Today)</label>
</ListView>